objects/BMCServiceDesk__BMC_ConnectivitySegment__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__ConnectivityType__c</fullName>
        <label>Connectivity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethernet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TokenRing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Fixed__c</fullName>
        <label>Fixed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NetworkID__c</fullName>
        <label>Network ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OtherTypeDescription__c</fullName>
        <label>Other Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>